2009-04-29  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Fixed handling of _NET_WM_PID property.

	* matchbox/core/mb-wm-client-window.c:

2009-04-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Reliability fixes.  Do not freak out when the wm is restarted
	with a fullscreen application in front.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  When a fullscreen client is realized (mapped effectively)
	  do not create its frame not even if it's not undecorated
	  otherwise because then XRestackWindow() won't be able to
	  stack it properly (because the client window will be a child
	  of the frame, not the root window).
	* matchbox/core/mb-window-manager.c (stack_sync_to_display):
	  Missing XSync() added after XRestackWindows().

2009-04-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify):
	  Only notify the cmgr if the mapped window is the client's,
	  and don't try to be smart about fullscreenness.  Fixes the
	  problem remaining after NB#113103 ie. that a ghost thumbnail
	  remained in the switcher.  In the described use case the
	  main window got unfullscreened.  We ignored the unmaps and
	  maps as usual but later on we got a map for the frame window
	  and notified the cmgr about it -- but we didn't have an
	  intermediate unmap.

2009-04-28  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/client-types/mb-wm-client-menu.c:
	Popup menus aren't restricted to appear to the right
        of a particular X coordinate.  Other kinds of menu
        still are.

        Fixes NB#101437.

2009-04-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.35

2009-04-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * matchbox/core/mb-wm-root-window.c:
        new flag to mean that a window should only be closed if
        it's topmost.
        Fixes NB#105384.

2009-04-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>
